[gd_scene load_steps=6 format=3 uid="uid://dr8e1cyk62td0"]

[ext_resource type="Script" path="res://Scripts/Menus/game_over.gd" id="1_6dfr0"]
[ext_resource type="Texture2D" uid="uid://dsp0cggtj1jk6" path="res://Art/UI/General Text Button.png" id="2_qy3nc"]
[ext_resource type="Texture2D" uid="uid://voxrln1urfrd" path="res://Art/UI/General Text ButtonPressed.png" id="3_n33tk"]
[ext_resource type="Texture2D" uid="uid://dhb1n6bileppk" path="res://Art/UI/General Text ButtonBlack.png" id="4_pfgy7"]
[ext_resource type="LabelSettings" uid="uid://bd184ntgknbm1" path="res://Fonts/MainMenuButtonFont.tres" id="5_tuwit"]

[node name="game_over" type="CanvasLayer"]
layer = 4
script = ExtResource("1_6dfr0")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 660.0
offset_top = 240.0
offset_right = 1262.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 105
text = "GAME OVER"

[node name="QuitToMenuButton" type="TextureButton" parent="."]
offset_left = 188.0
offset_top = 865.0
offset_right = 692.0
offset_bottom = 949.0
texture_normal = ExtResource("2_qy3nc")
texture_hover = ExtResource("3_n33tk")
texture_disabled = ExtResource("4_pfgy7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="QuitToMenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = -22.0
offset_right = 102.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_font_sizes/font_size = 31
text = "Main Menu"
label_settings = ExtResource("5_tuwit")
horizontal_alignment = 1

[node name="LoadGameButton" type="TextureButton" parent="."]
offset_left = 749.0
offset_top = 863.0
offset_right = 1253.0
offset_bottom = 947.0
disabled = true
texture_normal = ExtResource("2_qy3nc")
texture_hover = ExtResource("3_n33tk")
texture_disabled = ExtResource("4_pfgy7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="LoadGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = -22.0
offset_right = 102.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_font_sizes/font_size = 31
text = "Load Game"
label_settings = ExtResource("5_tuwit")
horizontal_alignment = 1

[node name="QuitGameButton" type="TextureButton" parent="."]
offset_left = 1306.0
offset_top = 867.0
offset_right = 1810.0
offset_bottom = 951.0
texture_normal = ExtResource("2_qy3nc")
texture_hover = ExtResource("3_n33tk")
texture_disabled = ExtResource("4_pfgy7")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="QuitGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = -22.0
offset_right = 102.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_font_sizes/font_size = 31
text = "Quit Game"
label_settings = ExtResource("5_tuwit")
horizontal_alignment = 1

[connection signal="pressed" from="QuitToMenuButton" to="." method="_on_quit_to_menu_button_pressed"]
[connection signal="pressed" from="LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="QuitGameButton" to="." method="_on_quit_game_button_pressed"]
